--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^2.8.2",
     "expo": "~53.0.20",
-    "expo-camera": "^16.1.11",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~16.1.11",
     "expo-font": "~13.3.2",
+    "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
