maj fetch bookedex

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "expo": "~53.0.20",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.11",
+    "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-safe-area-context": "5.4.0",
