--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-element-dropdown": "^2.12.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0",
     "react-redux": "^9.2.0"
   },
